--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
   "name": "Resonance Body Map",
   "short_name": "Resonance",
   "description": "Real-time sound frequency visualization for the body - a tool for sound healing demonstrations",
-  "start_url": "/index.html",
+  "start_url": "./",
+  "scope": "./",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#08080c",
@@ -10,58 +11,9 @@
   "categories": ["health", "education", "entertainment"],
   "icons": [
     {
-      "src": "assets/icon-72.png",
-      "sizes": "72x72",
-      "type": "image/png"
-    },
-    {
-      "src": "assets/icon-96.png",
-      "sizes": "96x96",
-      "type": "image/png"
-    },
-    {
-      "src": "assets/icon-128.png",
-      "sizes": "128x128",
-      "type": "image/png"
-    },
-    {
-      "src": "assets/icon-144.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    },
-    {
-      "src": "assets/icon-152.png",
-      "sizes": "152x152",
-      "type": "image/png"
-    },
-    {
-      "src": "assets/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "assets/icon-384.png",
-      "sizes": "384x384",
-      "type": "image/png"
-    },
-    {
-      "src": "assets/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    },
-    {
-      "src": "assets/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
-    }
-  ],
-  "screenshots": [
-    {
-      "src": "assets/screenshot-portrait.png",
-      "sizes": "1024x1366",
-      "type": "image/png",
-      "form_factor": "narrow"
+      "src": "assets/icon.svg",
+      "sizes": "any",
+      "type": "image/svg+xml"
     }
   ]
 }
