--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "start_url": "./",
   "scope": "./",
   "display": "standalone",
-  "orientation": "portrait",
+  "orientation": "any",
   "background_color": "#08080c",
   "theme_color": "#08080c",
   "categories": ["health", "education", "entertainment"],
@@ -13,7 +13,16 @@
     {
       "src": "assets/icon.svg",
       "sizes": "any",
-      "type": "image/svg+xml"
+      "type": "image/svg+xml",
+      "purpose": "any"
+    }
+  ],
+  "shortcuts": [
+    {
+      "name": "Start Listening",
+      "short_name": "Listen",
+      "description": "Begin real-time frequency visualization",
+      "url": "./?action=listen"
     }
   ]
 }
